--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,6 +8,8 @@
     justify-content: center;
     align-items: center;
     position: fixed;
+    /* overflow: visible; */
+    z-index: 1;
 }
 .left
 {
