--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .parent1
 {   
     width: 100%;
-    height: 18vh;
+    height: 15vh;
     /* border: 2px solid white; */
     background-color: #2C263B;
     display: flex;
@@ -54,6 +54,7 @@
     justify-content: center;
     align-items: center;
     height: auto;
+    position: absolute;
     width: 100%;
     }
     .navbuttons
