--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -72,3 +72,18 @@
     margin: 7.5%;
   }
 }
+@media screen and (max-width: 500px)
+{
+    .projectsMyDesc
+  {
+    display: grid;
+    grid-template-columns: 60%  ;
+    /* gap: 10px; */
+    /* margin: 1em; */
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;;
+    
+  }
+}
