Linking to spreadsheet remaining

--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,24 @@ html{
 {
   margin-top: 20vh;
 }
-.child3
+
+.child7
 {
   margin-top: 10vh;
 }
 .child4
 {
-  margin-top: 10vh;
+  margin-top: 20vh;
 }
 .child5
+{
+  margin-top: 20vh;
+}
+.child6
+{
+  margin-top: 15vh;
+}
+.child8
 {
   margin-top: 10vh;
 }
