--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -1,11 +1,15 @@
 .parent2
 {
     height: auto;
-    width: 90%;
-    border: 2px solid blue;
-    padding-top: auto;
+    width: 80%;
+    /* border: 2px solid blue; */
+    /* padding-top: auto; */
     margin-left: 10%;
     margin-right: 10%;
+    text-align: center;
+    /* position: fixed; */
+   top:40em;
+   margin-top: 100px;
 }
 .name2
 {
@@ -34,7 +38,7 @@ hr{
 {
     /* border: 2px solid red; */
     color: white;
-    margin-right: 40%;
+    /* margin-right: 40%; */
     font-size: 150%;
     margin-top: 50px;
 }
