--- a/src/components/css/Projects.css
+++ b/src/components/css/Projects.css
@@ -2,10 +2,11 @@
 {
     height: auto;
     width: 80%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin-top: auto;
     margin-left: 10%;
     margin-right: 10%;
+   
 }
 .projectsname2
 {
@@ -18,6 +19,7 @@
     font-weight: bolder;
     color:#D1D7E0;
     background-color: #2C263B;
+    
     
 }
 .projecthr{
@@ -35,9 +37,7 @@
     /* border: 2px solid red; */
     width: auto;
     color: white;
-    margin-right: 40%;
     font-size: 150%;
-    margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -69,21 +69,34 @@
     grid-template-columns: 60%  ;
     gap: 10px;
     /* margin: 1em; */
-    margin: 7.5%;
+    margin:0%;
+  }
+  .projectsname2
+  {
+    margin-bottom: 10%;
   }
 }
 @media screen and (max-width: 500px)
 {
+  .projectsname2
+  {
+    margin-bottom: 10%;
+  }
     .projectsMyDesc
   {
     display: grid;
-    grid-template-columns: 60%  ;
+    grid-template-columns: 80%  ;
     /* gap: 10px; */
     /* margin: 1em; */
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 0px;
-    padding-right: 0px;;
-    
+    padding-right: 0px;    
+  }
+  .projectsparent2
+  {
+    width: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
   }
 }
