--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     font-weight: bolder;
-    color:#D1D7E0;
+    color:#FFD073;
     background-color: #2C263B;
     
 }
