--- a/src/components/css/Projects.css
+++ b/src/components/css/Projects.css
@@ -17,8 +17,8 @@
     justify-content: center;
     align-items: center;
     font-weight: bolder;
-    color:#D1D7E0;
-    background-color: #2C263B;
+    color:#FFD073;
+        background-color: #2C263B;
     
     
 }
