resume preview and download feature added

--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -33,7 +33,18 @@
   font-size: 110%;
   font-weight: bold;
 }
-.navbuttons:hover {
+.navbuttons2
+{
+  margin-left: 0px;
+  margin-right: 0px;
+  border: 0px;
+  background-color: #2c263b;
+  color: #d0d7e1;
+  font-size: 100%;
+  font-weight: bold;
+
+}
+.navbuttons:hover  {
   cursor: pointer;
   color: #8892b0;
   font-weight: bolder;
