--- a/src/components/css/Skillcard.css
+++ b/src/components/css/Skillcard.css
@@ -13,6 +13,17 @@
     margin-top: 5%;
     margin-bottom: 5%;
   
+    transition: all 0.2s ease-in;
+}
+#skillcardparent23
+{
+  text-decoration: none;
+}
+.Skillcardparent:hover
+{
+    scale: 1.1;
+    transition: all 0.2s ease-out;
+  
 }
 .imagename
 {
