--- a/src/components/css/Work.css
+++ b/src/components/css/Work.css
@@ -1,7 +1,5 @@
 .workparent {
-  /* border: 2px solid red; */
   margin-top: 5%;
-  /* height: 80%;; */
   height: 500px;
   margin-left: 15%;
   margin-right: 15%;
@@ -35,7 +33,6 @@
 .workouterdiv {
   display: flex;
   margin-top: 60px;
-  /* border: 2px solid  brown; */
   margin-left: 10%;
   margin-right: 10%;
   height: 80%;
@@ -50,12 +47,10 @@
 .workright {
   margin-left: 2%;
   width: 80%;
-  /* border: 2px solid blue; */
 }
 .workrole {
-  height: 13%;
-  /* border: 1px solid green; */
-  color: #FFC857;
+  height: 40px;
+  color: #ffc857;
   font-weight: 500;
   display: flex;
   font-size: 150%;
@@ -85,24 +80,22 @@
 }
 
 .workcompanyname {
-  height: 10%;
+  height: 40px;
   background-color: #2c263b;
   text-align: center;
   border: 0px;
+  width: 200px;
   font-weight: bold;
   color: #d1d7e0;
+  font-size: 150%;
   border-left: 3px solid #493e62;
-  /* transition: all 0.1s ease-out; */
-}
-.workcompanyname:hover {
   cursor: pointer;
-  /* background-color: #8e84a5; */
-  color: #2C263B;
-  /* transition: all 0.01s ease-in; */
+  margin-bottom: 6px;
 }
+
 #button1 {
-  border-left: 3px solid #FFC857;
-  color: #FFC857;
+  border-left: 3px solid #ffc857;
+  color: #ffc857;
 }
 li {
   margin-top: 2%;
@@ -111,7 +104,6 @@ li {
 @media screen and (max-width: 1000px) {
   .workouterdiv {
     display: block;
-   
   }
   .workleft {
     flex-direction: row;
@@ -122,58 +114,51 @@ li {
   }
   #button1 {
     border-left: 0px;
-    border-bottom: 3px solid #FFC857;
-    color: #FFC857;
+    border-bottom: 3px solid #ffc857;
+    color: #ffc857;
   }
-  .workcompanyname
-  {
+  .workcompanyname {
     font-size: 110%;
     border-left: 0px;
     border-bottom: 3px solid #493e62;
   }
-  .workdescription
-  {
+  .workdescription {
     width: 120%;
     height: 200px;
     overflow: auto;
     margin-top: 20px;
     /* border: 1px solid red; */
   }
- 
-  
 }
 @media screen and (max-width: 700px) {
-  .workparent
-  {
+  .workparent {
     margin-left: 0px;
     margin-right: 0px;
     width: 100%;
   }
-  .workouterdiv
-  {
+  .workouterdiv {
     /* border: 2px solid blue; */
     width: 95%;
     margin-right: 2.5%;
-    margin-left:2.5%;
+    margin-left: 2.5%;
   }
- 
 }
 ::-webkit-scrollbar {
-    width: 3px;
-    height: 3px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+  width: 3px;
+  height: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
