--- a/src/components/css/Work.css
+++ b/src/components/css/Work.css
@@ -58,7 +58,6 @@
 }
 .workduration {
   height: 5%;
-  /* border: 1px solid red; */
   color: #d1d7e0;
   font-weight: 500;
   display: flex;
@@ -67,14 +66,13 @@
 }
 .workdescription {
   height: 80%;
-  overflow: auto;
+  width: 100%;
   font-weight: 500;
   display: flex;
   justify-content: space-between;
   font-size: 100%;
   align-items: center;
   color: #9ea1a5;
-  overflow: auto;
   flex-direction: column;
   margin-bottom: 10%;
 }
@@ -88,7 +86,6 @@
   font-weight: bold;
   color: #d1d7e0;
   font-size: 150%;
-  border-left: 3px solid #493e62;
   cursor: pointer;
   margin-bottom: 6px;
 }
@@ -104,11 +101,13 @@ li {
 @media screen and (max-width: 1000px) {
   .workouterdiv {
     display: block;
+    width: 100%;
   }
   .workleft {
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
+    border: "1px solid red";
     overflow: auto;
     margin-bottom: 5%;
   }
@@ -117,15 +116,40 @@ li {
     border-bottom: 3px solid #ffc857;
     color: #ffc857;
   }
+  .parentCompanyName {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 6px;
+  }
   .workcompanyname {
     font-size: 110%;
     border-left: 0px;
     border-bottom: 3px solid #493e62;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
+
+  .workright {
+    width: 100%;
+    margin-left: 0px;
+  }
+
   .workdescription {
-    width: 120%;
-    height: 200px;
+    width: 100%;
+  }
+
+  .workrole {
+    width: 100%;
+    height: auto;
     overflow: auto;
+  }
+
+  .workdescription {
+    width: 100%;
+    height: 200px;
+    overflow-y: auto;
     margin-top: 20px;
     /* border: 1px solid red; */
   }
@@ -136,8 +160,20 @@ li {
     margin-right: 0px;
     width: 100%;
   }
+  .workright {
+    width: 100%;
+    margin-left: 0px;
+  }
+
+  .workdescription {
+    width: 100%;
+  }
+
+  .workrole {
+    width: 100%;
+    overflow: auto;
+  }
   .workouterdiv {
-    /* border: 2px solid blue; */
     width: 95%;
     margin-right: 2.5%;
     margin-left: 2.5%;
